# cdp-analytics-python

./: .bumpversion.cfg  .gitignore  .mise.toml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/: BUGBOT.md
.github/workflows/: build.yml  lint.yml  publish.yml  release.yml  test.yml
analytics/: consumer.py
customerio/analytics/: __init__.py  client.py  consumer.py  redis.py  request.py  version.py
customerio/analytics/test/: __init__.py  client.py  consumer.py  module.py  request.py  utils.py
